force-app/main/default/objects/Invoice_Payment_Rules__mdt/Invoice_Payment_Rules__mdt.object-meta.xml
<CustomObject>
    <label>Invoice Payment Rules</label>
    <pluralLabel>Invoice Payment Rules</pluralLabel>
</CustomObject>