force-app/main/default/objects/Invoice_Payment_Rules__mdt/fields/AllowOverpaymentPercent__c.field-meta.xml
<CustomField>
    <fullName>AllowOverpaymentPercent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Allow Overpayment Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>