force-app/main/default/objects/Invoice_Payment_Rules__mdt/fields/AutoCloseInvoice__c.field-meta.xml
<CustomField>
    <fullName>AutoCloseInvoice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Close Invoice</label>
    <type>Checkbox</type>
</CustomField>