force-app/main/default/objects/Invoice_Payment_Rules__mdt/fields/BlockOverpayment__c.field-meta.xml
<CustomField>
    <fullName>BlockOverpayment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Block Overpayment</label>
    <type>Checkbox</type>
</CustomField>