force-app/main/default/objects/Invoice_Payment_Rules__mdt/fields/CloseThresholdPercent__c.field-meta.xml
<CustomField>
    <fullName>CloseThresholdPercent__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Close Threshold Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>