force-app/main/default/objects/Invoice_Payment_Rules__mdt/fields/ErrorMessageOverpay__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessageOverpay__c</fullName>
    <defaultValue>&quot;Payment exceeds allowed amount for this invoice.&quot;</defaultValue>
    <label>Error Message Overpay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>